force-app/main/default/objects/Books__c/fields/Author_DOB__c.field-meta.xml
<CustomField>
    <fullName>Author_DOB__c</fullName>
    <label>Author DOB</label>
    <type>Date</type>
</CustomField>