force-app/main/default/objects/Books__c/fields/Author_Mail__c.field-meta.xml
<CustomField>
    <fullName>Author_Mail__c</fullName>
    <label>Author Mail</label>
    <type>Email</type>
</CustomField>