force-app/main/default/objects/Books__c/fields/Author_Number__c.field-meta.xml
<CustomField>
    <fullName>Author_Number__c</fullName>
    <label>Author Number</label>
    <type>Phone</type>
</CustomField>