force-app/main/default/objects/Books__c/fields/Author_s_Profile__c.field-meta.xml
<CustomField>
    <fullName>Author_s_Profile__c</fullName>
    <label>Author&apos;s Profile</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>